Fixed Permission Issues

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "name": "Gmail Dark Souls Email Sent",
     "version": "1.0",
     "description": "Replaces Gmail's sent confirmation with a Dark Souls-style overlay.",
-    "permissions": ["activeTab", "scripting"],
+    "permissions": [],
     "web_accessible_resources": [
       {
         "resources": ["assets/*"],
